# UMA-code-examples

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.md  LICENSE-APACHE  README.md  SECURITY.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  chapter_or_feature_suggestion.md  config.yml  reader_feedback.md
.github/workflows/: agent-sdk-validation.yml  benchmark-proof.yml  book-site-pages.yml  business-logic-coverage.yml  reader-smoke.yml
benchmarks/: benchmark-proof.json  benchmark-proof.md
book-site/: README.md  _headers  app.js  index.html  llms-full.txt  llms.txt  package-lock.json  robots.txt  sitemap.xml  styles.css  subpages.css
book-site/about-enrico/: index.html
book-site/active-descriptors/: index.html
book-site/agent-vs-runtime/: index.html
book-site/ai-native-runtime-governance/: index.html
book-site/architecture-drift-and-portable-business-logic/: index.html
book-site/benchmark-and-footprint/: index.html
book-site/book/: index.html
book-site/common-criticisms-and-tradeoffs-of-uma/: index.html
book-site/comparisons/: index.html
book-site/contract-driven-orchestration/: index.html
book-site/core-model/: index.html
book-site/data/: blog-posts.json
book-site/diagrams/: discoverable-decision-lifecycle.mmd  evolution-without-fragmentation.mmd  index.html  portable-service-boundary.mmd  runtime-execution-flow.mmd  service-graph-evolution.mmd  trust-boundary-decision.mmd
book-site/discoverability/: index.html
book-site/end-to-end-feature-flag-example/: index.html
book-site/evolve-uma/: index.html
book-site/examples/: index.html
book-site/faq/: index.html
book-site/from-stack-ownership-to-behavior-ownership/: index.html
book-site/how-systems-evolve-without-fragmentation/: index.html
book-site/how-to-prove-portability/: index.html
book-site/how-uma-works/: index.html
book-site/incremental-uma-adoption/: index.html
book-site/late-bound-policy-enforcement/: index.html
book-site/learn-uma/: index.html
book-site/learning-path/: index.html
book-site/portable-business-logic/: index.html
chapter-04-feature-flag-evaluator/: Cargo.toml  README.md
chapter-05-post-fetcher-runtime/: Cargo.toml  README.md
chapter-06-portability-lab/: CONTRACT.json  README.md
chapter-06-portability-lab/runtime/crates/bus/: Cargo.toml
chapter-06-portability-lab/runtime/crates/bus/src/: lib.rs
chapter-07-metadata-orchestration/: README.md  package.json
chapter-08-service-graph/: README.md
chapter-09-trust-boundaries/: README.md
chapter-10-architectural-tradeoffs/: README.md
chapter-11-evolution-without-fragmentation/: README.md
chapter-12-discoverable-decisions/: README.md
chapter-13-portable-mcp-runtime/: AGENTS.md  README.md
chapter-8-service-graph/: Cargo.toml  README.md
chapter-9-trust-boundaries/: Cargo.toml  README.md
content/: README.md  site-map.md
docs/: README.md  faq.md  portable-microservices.md  universal-microservices-vs-microservices.md  universal-microservices-vs-serverless.md  webassembly-portability.md  what-is-universal-microservices.md
feature-flag-evaluator/: README.md
feature-flag-evaluator/core/: Cargo.toml
feature-flag-evaluator/core/src/: lib.rs
feature-flag-evaluator/wasi-app/: Cargo.toml
feature-flag-evaluator/wasi-app/src/: main.rs
scripts/: README.md  check_benchmark_artifacts.py  check_business_logic_coverage.sh  check_reader_docs.sh  check_rust_coverage.sh  export-content-md.mjs  report_benchmark_proof.py  report_business_logic_coverage.sh  report_rust_coverage.sh  simulate_fresh_reader_checkout.sh  smoke_reader_paths.sh
seo-audit-2/: ACTION-PLAN.md  FULL-AUDIT-REPORT.md  content.md  geo.md  schema.md  sxo.md  technical.md
uma-metadata-orchestration/: README.md  package-lock.json  package.json
uma-portable-service-example/: Makefile  README.md
uma-portable-service-example/runtime/crates/bus/: Cargo.toml
uma-portable-service-example/runtime/crates/bus/src/: lib.rs
uma-portable-service-example/runtime/crates/runner_native/: Cargo.toml
uma-portable-service-example/runtime/crates/runner_native/src/: main.rs
uma-portable-service-example/runtime/crates/runner_wasm/: Cargo.toml
uma-portable-service-example/runtime/crates/runner_wasm/src/: main.rs
uma-post-fetcher/: Cargo.toml  Makefile  README.md
uma-post-fetcher/runtime/: Cargo.toml
uma-post-fetcher/runtime/src/: adapter_manager.rs  cache_adapter.rs  event_bus.rs  lib.rs  loader.rs  main.rs  metadata.rs  retry_adapter.rs  tests.rs  thread_manager.rs  wasi_http_adapter.rs
(+634 files in other folders)
