[package]
name = "uma_runtime"
version = "0.1.0"
edition = "2021"

# Build as a cdylib so it can be compiled to WebAssembly.
[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Dynamic error handling
anyhow = "1"
thiserror = "1"

# Host fetch implementation for native builds
reqwest = { version = "0.11", features = ["blocking"] }

# Depend on the service crate
service = { path = "../service" }
