
[package]
name = "bus"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
contract = { path = "../contract" }
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonschema = "0.18"
