[package]
name = "runner_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
contract = { path = "../contract" }
core_service = { path = "../core_service" }

[package.metadata.wasi]
runtime = true

[[bin]]
name = "runner_wasm"
path = "src/main.rs"


[dev-dependencies]
assert_cmd = "2"
predicates = "3"

tracing = "0.1"
